python/testData/highlighting/exceptionGroupInExceptStar.py
try:
    ...
except* <error descr="ExceptionGroup cannot be used in except*">ExceptionGroup</error>:
    pass